fix: panel and dropdown overlap (#47)
fixed panel and dropdown overlap

The elements panel and timing diagram were overlapping
with dropdowns because of z-index being 100,
changed the z-index and now the dropdowns are behaving
as expected.
Fixes: #43

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -249,7 +249,7 @@
 
 .draggable-panel-css {
     border-radius: 5px;
-    z-index: 100;
+    z-index: 70;
     transition: background 0.5s ease-out;
     position: fixed;
 }
