--- a/src/styles/css/main.stylesheet.css
+++ b/src/styles/css/main.stylesheet.css
@@ -322,7 +322,7 @@ input[type='text']:focus {
 
 .draggable-panel-css {
     border-radius: 5px;
-    z-index: 100;
+    z-index: 70;
     transition: background 0.5s ease-out;
     position: fixed;
 }
@@ -737,7 +737,7 @@ div.icon img {
 
 .timing-diagram-panel {
     border-radius: 5px;
-    z-index: 100;
+    z-index: 70;
     transition: background 0.5s ease-out;
     position: fixed;
     cursor: pointer;
